# gui-uya

./: .editorconfig  .gitignore  .uya_openai.env.example  CHANGELOG.md  Makefile  README.md  uya.toml
.githooks/: pre-commit
.github/workflows/: gui-phase0.yml  sim-web-pages.yml
docs/: development.md  gui_uya_api_reference.md  gui_uya_architecture.md  gui_uya_compiler_fixlist.md  gui_uya_custom_widget_guide.md  gui_uya_design.md  gui_uya_linux_sim.md  gui_uya_linux_sim_todo.md  gui_uya_performance_guide.md  gui_uya_phase5_report.md  gui_uya_phase6_report.md  gui_uya_porting_guide.md  gui_uya_quickstart.md  gui_uya_release_plan.md  gui_uya_rich_text_input_design.md  gui_uya_rich_text_input_todo.md  gui_uya_text_vs_lvgl.md  gui_uya_theme_guide.md  gui_uya_todo.md  gui_uya_web_backend_design.md  gui_uya_web_backend_todo.md  openai_doudizhu_demo_design.md  openai_doudizhu_demo_todo.md
gui/: bench_suite.uya  dashboard_compare_main.uya  phase0_smoke.uya  phase1_smoke.uya  phase2_smoke.uya  phase3_smoke.uya  phase4_smoke.uya  phase6_smoke.uya  render_test_suite.uya  richtext_test_suite.uya  sim_main.uya  test_suite.uya  test_suite_extra.uya  text_render_compare.uya  web_present_plan_suite.uya
gui/anim/: tween.uya  (+2 more)
tools/: build_gui_sim.sh  build_gui_web.sh  check_gui_bench.py  dashboard_compare_report.py  deploy_ddz_openai_proxy.sh  gen_gui_api_docs.sh  gen_wqy_demo_bitmap_assets.py  gen_wqy_demo_bitmap_font.c  push_ddz_openai_proxy_secrets.sh  smoke_gui_web.py  smoke_gui_web.sh  stage_gui_web_pages.sh
tools/lvgl_compare/: CMakeLists.txt  dashboard.c  lv_conf.h  main.c
(+184 files in other folders)
